--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
+      [Fixed Link](./02/cutting.html)
     </div>
     <div class="col-sm-4">
       ![sewing image](./01_intro/sew.png) 
